--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,5 +1,292 @@
 .footer{
     width: 100%;
     height: 414px;
-    background-color: black;
+    background: #232A34;
+}
+
+.footer .top{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer .top .footerinfo{
+    width: 80%;
+    height: 60%;
+    /* background-color: red; */
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-between;
+    /* position: relative;
+    left: 10px; */
+}
+
+.footer .top .footerinfo .aboutus, .info , .contactus, .social{
+    width: 20%;
+    height: 100%;
+    /* background-color: green; */
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: space-between;
+}
+
+
+/* heading of about us*/
+.footer .top .footerinfo .aboutus .heading{
+    width: 122px;
+    height: 29px;
+    
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 120%;
+    /* identical to box height, or 29px */
+    
+    
+    color: #FFFFFF;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;   
+}
+
+.footer .top .footerinfo .info .heading{
+    width: 185px;
+    height: 32px;
+    
+    /* h3 */
+    
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+    
+    letter-spacing: 0.1px;
+    
+    color: #FFFFFF;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.footer .top .footerinfo .contactus .heading{
+    width: 151px;
+    height: 32px;
+    
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+    
+    letter-spacing: 0.1px;
+    
+    color: #FFFFFF;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;  
+}
+
+
+
+.footer .top .footerinfo .social .heading{
+    width: 100px;
+    height: 32px;
+    
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+    
+    letter-spacing: 0.1px;
+    
+    color: #FFFFFF;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.footer .top .footerinfo .aboutus .bar, .info .bar, .contactus .bar, .social .bar{
+    width: 94px;
+    height: 3px;
+
+    background: #898B92;
+
+    /* Inside auto layout */
+
+    flex: none;
+    flex-grow: 0;
+}
+
+.footer .top .footerinfo .info .content{
+    width: 65%;
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .top .footerinfo .info .content div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer .top .footerinfo .info .content div a{
+    text-decoration: none;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    /* identical to box height, or 171% */
+
+    letter-spacing: 0.2px;
+
+    /* caption */
+
+    color: #898B92;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    flex-grow: 0;
+}
+
+.footer .top .footerinfo .info{
+    height: 85%;
+}
+
+.footer .top .footerinfo .aboutus .content{
+    width: 222px;
+    height: 60px;
+    
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 140%;
+    /* or 20px */
+    
+    letter-spacing: 0.02em;
+    
+    color: #898B92;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 2;
+    flex-grow: 0;    
+}
+
+.footer .top .footerinfo .aboutus{
+    height: 70%;
+}
+
+.footer .top .footerinfo .contactus .content{
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* width: 250px;
+    height: 48px; */
+
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+
+    letter-spacing: 0.2px;
+
+    /* caption */
+
+    color: #898B92;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    flex-grow: 0;
+}
+
+.footer .top .footerinfo .contactus .content a{
+    color: #5772FF;
+}
+
+
+.footer .top .footerinfo .social{
+    height: 60%;
+}
+
+.footer .top .footerinfo .social .content{
+    width: 55%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .top .footerinfo .social .content a{
+    background: #898B92;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    border-radius: 50%;
+}
+
+
+.footer .bottom{
+    width: 100%;
+    height: 20%;
+    background: #141414;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer .bottom div{
+    width: 23%;
+    /* height: 24px; */
+
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    /* identical to box height, or 171% */
+
+    letter-spacing: 0.2px;
+
+    /* caption */
+
+    color: #898B92;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;   
 }
