--- a/src/style/Content4.css
+++ b/src/style/Content4.css
@@ -7,7 +7,6 @@
     
 }
 
-
 .content4 .main{
     display: flex;
     align-items: center;
@@ -24,6 +23,7 @@
     width: 384px;
     position: relative;
     transition: 0.2s ease-in;
+    /* margin-left: 2%; */
 }
 
 .content4 .main .box:hover{
