--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -9,8 +9,10 @@
 
 .contact-us .content3 .main{
     /* width: 121.1rem; */
-    width: 119.7rem;
-    height: 31.8rem;
+    /* width: 119.7rem; */
+    width: 80%;
+    /* height: 31.8rem; */
+    height: auto;
     /* background-color: black; */
     display: flex;
     /* flex-wrap: wrap; */
@@ -20,11 +22,12 @@
 
 .contact-us .content3 .main .box{
     width: 38.4rem;
-    height: 100%;
+    /* height: 100%; */
+    height: 31.8rem;
     background: #FFFFFF;
     display: flex;
     justify-content: center;
-    margin-left: 2%;
+    margin: 2%;
 }
 
 /* address */
@@ -202,3 +205,26 @@
     
     color: #5772FF;    
 }
+
+
+/* Responsive */
+
+@media screen and (max-width : 800px){
+    .content3{
+        height: 1000rem;
+    }
+
+    .contact-us .content3 .main{
+        /* display : block; */
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 100%;
+        width: 100%;
+    }
+
+    .contact-us .content3 .main .box{
+        /* width: 100%; */
+    }
+}
+
