--- a/src/style/Clients.css
+++ b/src/style/Clients.css
@@ -1,6 +1,6 @@
 .clients{
     width: 100%;
-    height: 370px;
+    height: 37rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,17 +19,19 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-between;    
-    height: 55px;   
+    height: 55px;
+    position: relative;
+    top: 3rem;   
 }
 
 .clients .main .top .heading{
-    width: 381px;
-    height: 38px;
+    width: 38.1rem;
+    height: 3.8rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 32px;
+    font-size: 3.2rem;
     line-height: 120%;
     /* or 38px */
     
@@ -41,8 +43,8 @@
 }
 
 .clients .main .top .bar{
-    width: 94px;
-    height: 3px;    
+    width: 9.4rem;
+    height: .3rem;    
     /* Primary */
     
     background: #4D0043;   
@@ -54,5 +56,22 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
+/* Responsive */
+
+@media screen and (max-width : 850px){
+    .map{
+        width: 100%;
+        height: 55rem;
+    }
+
+    .clients{
+        height: 65rem;
+    }
+
+    .clients .main .top{
+        top: 0;
+    }
+}
