--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     width: 100%;
-    height: 414px;
+    height: 41.4rem;
     background: #232A34;
 }
 
@@ -36,13 +36,13 @@
 
 /* heading of about us*/
 .footer .top .footerinfo .aboutus .heading{
-    width: 122px;
-    height: 29px;
+    width: 12.2rem;
+    height: 2.9rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 24px;
+    font-size: 2.4rem;
     line-height: 120%;
     /* identical to box height, or 29px */
     
@@ -58,19 +58,19 @@
 }
 
 .footer .top .footerinfo .info .heading{
-    width: 185px;
-    height: 32px;
+    width: 18.5rem;
+    height: 3.2rem;
     
     /* h3 */
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 2.4rem;
+    line-height: 3.2rem;
     /* identical to box height, or 133% */
     
-    letter-spacing: 0.1px;
+    letter-spacing: 0.01rem;
     
     color: #FFFFFF;
     
@@ -83,17 +83,17 @@
 }
 
 .footer .top .footerinfo .contactus .heading{
-    width: 151px;
-    height: 32px;
+    width: 15.1rem;
+    height: 3.2rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 2.4rem;
+    line-height: 3.2rem;
     /* identical to box height, or 133% */
     
-    letter-spacing: 0.1px;
+    letter-spacing: 0.01rem;
     
     color: #FFFFFF;
     
@@ -108,17 +108,17 @@
 
 
 .footer .top .footerinfo .social .heading{
-    width: 100px;
-    height: 32px;
+    width: 10rem;
+    height: 3.2rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 2.4rem;
+    line-height: 3.2rem;
     /* identical to box height, or 133% */
     
-    letter-spacing: 0.1px;
+    letter-spacing: 0.01rem;
     
     color: #FFFFFF;
     
@@ -131,8 +131,8 @@
 }
 
 .footer .top .footerinfo .aboutus .bar, .info .bar, .contactus .bar, .social .bar{
-    width: 94px;
-    height: 3px;
+    width: 9.4rem;
+    height: .3rem;
 
     background: #898B92;
 
@@ -143,7 +143,7 @@
 }
 
 .footer .top .footerinfo .info .content{
-    width: 65%;
+    width: 55%;
     height: 50%;
     display: flex;
     justify-content: space-between;
@@ -156,15 +156,18 @@
 }
 
 .footer .top .footerinfo .info .content div a{
+    width: 9rem;
+    height: 2.4rem;
+
     text-decoration: none;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
     /* identical to box height, or 171% */
 
-    letter-spacing: 0.2px;
+    letter-spacing: 0.02rem;
 
     /* caption */
 
@@ -182,13 +185,14 @@
 }
 
 .footer .top .footerinfo .aboutus .content{
-    width: 222px;
-    height: 60px;
+    /* width: 22.2rem; */
+    width: 90%;
+    height: 6rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 1.4rem;
     line-height: 140%;
     /* or 20px */
     
@@ -219,11 +223,11 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
     /* or 171% */
 
-    letter-spacing: 0.2px;
+    letter-spacing: 0.02rem;
 
     /* caption */
 
@@ -256,7 +260,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 8px;
+    padding: .8rem;
     border-radius: 50%;
 }
 
@@ -277,11 +281,11 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
     /* identical to box height, or 171% */
 
-    letter-spacing: 0.2px;
+    letter-spacing: 0.02rem;
 
     /* caption */
 
