--- a/src/style/Quotes.css
+++ b/src/style/Quotes.css
@@ -1,6 +1,6 @@
 .quotes{
     width: 100%;
-    height: 658px;
+    height: 65.8rem;
     
     display: flex;
     align-items: center;
@@ -9,7 +9,7 @@
 
 .quotes .main{
     width: 100%;
-    height: 521px;
+    height: 52.1rem;
     background: linear-gradient(0deg, rgba(77, 0, 67, 0.9), rgba(77, 0, 67, 0.9)),url('../assests/factory-automation-with-automated-guided-vehicles-robotic-arm-transportation-increase-transport-more-with-safety.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 300px;
+    height: 30rem;
 }
 
 
@@ -38,33 +38,33 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    height: 65px;
+    height: 6.5rem;
 }
 
 .quotes .main .top .heading{
-    width: 431px;
-    height: 45px;
+    width: 43.1rem;
+    height: 4.5rem;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 40px;
+    font-size: 4rem;
     line-height: 120%;    
     text-align: center;
 }
 
 .quotes .main .top .bar{
-    width: 94px;
-    height: 2px;
+    width: 9.4rem;
+    height: .3rem;
     background: #FFFFFF;
 }
 
 .quotes .main .content{
-    width: 624px;
-    height: 85px;
+    width: 62.4rem;
+    height: 8.5rem;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 1.4rem;
     line-height: 140%;
     /* or 20px */
     
@@ -77,14 +77,14 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 16px 40px;
+    padding: 1.6rem 4rem;
     gap: 8px;
     background: #FFFFFF;
-    border-radius: 45px;
+    border-radius: 4.5rem;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 120%;
     /* identical to box height, or 22px */
     
