--- a/src/style/Template.css
+++ b/src/style/Template.css
@@ -1,7 +1,7 @@
 .template{
     max-width: 100%;
     /* height: 79vh; */
-    height: 584px;
+    height: 58.4rem;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.71) -1.25%, rgba(0, 0, 0, 0) 145.9%), url('../assests/template.jpg') no-repeat center center /cover;
     display: flex;
     align-items: center;
@@ -18,13 +18,13 @@
 }
 
 .template .main .top{
-    width: 1083px;
-    height: 74px;
+    width: 108.3rem;
+    height: 7.4rem;
 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 72px;
+    font-size: 7.2rem;
     line-height: 110%;
     /* or 79px */
 
@@ -35,13 +35,13 @@
 }
 
 .template .main .bottom{
-    width: 389px;
-    height: 40px;
+    width: 38.9rem;
+    height: 4rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 600;
-    font-size: 36px;
+    font-size: 3.6rem;
     line-height: 110%;
     /* identical to box height, or 40px */
     
