--- a/src/style/WhoWeAre.css
+++ b/src/style/WhoWeAre.css
@@ -1,6 +1,6 @@
 .wwr_outer{
 width: 100%;
-height: 658px;
+height: 65.8rem;
 background: #F5F5F5;
 display: flex;
 align-items: center;
@@ -20,22 +20,22 @@ justify-content: space-between;
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
-    gap: 16px;
+    gap: 1.6rem;
     
-    width: 447px;
-    height: 307px;
+    width: 44.7rem;
+    height: 30.7rem;
     /* left: calc(50% - 447px/2 - 376.5px);
     top: 80px;    */
 }
 
 .leftside .content .heading{
-    width: 431px;
-    height: 58px;
+    width: 43.1rem;
+    height: 5.8rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 48px;
+    font-size: 4.8rem;
     line-height: 120%;
     /* identical to box height, or 58px */
     /* text-color */
@@ -47,8 +47,8 @@ justify-content: space-between;
 }
 
 .leftside .content .bar{
-    width: 94px;
-    height: 3px;
+    width: 9.4rem;
+    height: .3rem;
 
     /* Primary */
 
@@ -62,13 +62,13 @@ justify-content: space-between;
 }
 
 .leftside .content .text{
-    width: 447px;
-    height: 214px;
+    width: 44.7rem;
+    height: 21.4rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 1.4rem;
     line-height: 140%;
     /* or 20px */
     
@@ -84,3 +84,4 @@ justify-content: space-between;
     order: 2;
     flex-grow: 0;
 }
+
