--- a/src/style/whatdoyou.css
+++ b/src/style/whatdoyou.css
@@ -1,6 +1,6 @@
 .whatdoyou{
     width: 100%;
-    height: 658px;
+    height: 65.8rem;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url('../assests/truck-vehicle-with-trailers-background.jpg') no-repeat center center /cover;
     display: flex;
     justify-content: center;
@@ -26,18 +26,18 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-between;     
-    height: 55px; 
+    height: 5.5rem; 
     /* height: 8.4%;  */
 }
 
 .whatdoyou .main .top .heading{
-    width: 338px;
-    height: 38px;
+    width: 33.8rem;
+    height: 3.8rem;
 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 32px;
+    font-size: 3.2rem;
     line-height: 120%;
     /* or 38px */
 
@@ -48,15 +48,15 @@
 }
 
 .whatdoyou .main .top .bar{
-    width: 94px;
-    height: 3px;    
+    width: 9.4rem;
+    height: .3rem;    
     /* Primary */
     
     background: #4D0043;   
 }
 
 .whatdoyou .main .bottom{
-    height: 138px;
+    height: 13.8rem;
     width: 100%;
     /* background-color: black; */
     display: flex;
@@ -66,13 +66,13 @@
 }
 
 .whatdoyou .main .bottom .content{
-    width: 922px;
-    height: 66px;
+    width: 92.2rem;
+    height: 6.6rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 1.4rem;
     line-height: 140%;
     /* or 20px */
     
@@ -87,27 +87,27 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 16px 40px;
-    gap: 8px;
+    padding: 1.6rem 4rem;
+    gap: .8rem;
 
-    width: 195px;
-    height: 54px;
+    width: 19.5rem;
+    height: 5.4rem;
 
     /* Primary */
 
     background: #4D0043;
-    border-radius: 45px;
+    border-radius: 4.5rem;
 }
 
 .whatdoyou .main .bottom .button a{
     text-decoration: none;
-    width: 115px;
-    height: 22px;
+    width: 11.5rem;
+    height: 2.2rem;
 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 120%;
 
     text-align: center;
@@ -118,4 +118,17 @@
     flex: none;
     order: 0;
     flex-grow: 0;
+}
+
+/* Responsive */
+
+@media screen and (max-width : 600px){
+    .whatdoyou .main .bottom .content{
+        /* width: 100%; */
+        width: 70.2rem;
+    }
+
+    .whatdoyou .main .bottom{
+        height: 16rem;
+    }
 }
