--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 /* .App {
   border-color: #f5f5f5;
   display: flex;
-  justify-content: center;
+  justify-contet: center;
   align-items: center;
   flex-direction: column;
   width: 100vw;
