--- a/src/components/ContactUs/DropMessage.css
+++ b/src/components/ContactUs/DropMessage.css
@@ -140,7 +140,8 @@
     padding: 1.6rem 4rem;
     gap: .8rem;
     
-    width: 24.2rem;
+    /* width: 24.2rem; */
+    width: 22.2rem;
     height: 5.4rem;
     /* Primary */
 
