--- a/src/style/Carousel.css
+++ b/src/style/Carousel.css
@@ -246,3 +246,48 @@
 .pagination_dot-active {
   background-color: #ffffff;
 }
+
+/* Responsiveness */
+
+@media screen and (max-width : 680px){
+  .card_heading{
+    width: 60.2rem;
+    height: 10.2rem;
+    
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 4.2rem;
+  }
+}
+
+@media screen and (max-width : 545px){
+  .card_heading{
+    width: 30.2rem;
+    height: 5.2rem;
+    
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.4rem;
+    line-height: 110%;
+    /* or 26px */
+    
+    letter-spacing: 0.02em;
+    
+    color: #FFFFFF;
+  }
+
+  .card_subHeading{
+    display: none;
+  }
+
+  .whatsapp{
+    display: none;
+  }
+
+  .carousel{
+    width: 100%;
+    height: 350px; 
+  }
+}
