--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -42,16 +42,22 @@
   max-width: 100%;
 }
 
+.outer .companylogo img:nth-child(2){
+  display: none;
+}
+
 .outer .inner{
   display: flex;
   align-items: center;
   justify-content: space-between;  
-  width: 50%;
+  width: 40%;
+  /* width: 51.6rem; */
   /* flex-wrap: wrap; */
 }
 
 .outer .inner li{
   list-style: none;
+  margin: 0.5rem;
 }
 
 /* .outer .inner li:nth-child(1) a{
@@ -71,7 +77,7 @@
   color: #FFFFFF;
 }
 
-.outer .inner .phn{
+.outer .phn{
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -79,7 +85,21 @@
   cursor: pointer;
 }
 
-.outer .inner .phn div:nth-child(2) a{
+.outer .hamburger{
+  display: none;
+}
+
+.outer .phn div:nth-child(1){
+  width: 1.796rem;
+  /* width: 20%; */
+}
+
+.outer .phn div:nth-child(2){
+  width: 13.6rem;
+  /* width: 70%; */
+}
+
+.outer .phn div:nth-child(2) a{
   font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
@@ -89,7 +109,7 @@
   text-decoration: none;
 }
 
-.outer .inner .phn div:nth-child(2):hover a{
+.outer .phn div:nth-child(2):hover a{
   color: #F31237;
 }
 
@@ -121,4 +141,116 @@
 
 .outer .login div:nth-child(2){
   color: #FFFFFF;
+}
+
+.outer .activenavmenu{
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 66.1rem;
+  background: #4D0043;
+  top: 90%;
+  transition: left 1s;
+  left: 0;
+  z-index: 1;
+}
+
+.outer .activenavmenu .menuitems{
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: space-evenly; */
+  height: 100%;
+}
+
+.outer .activenavmenu .menuitems a{
+  width: 74px;
+  height: 19px;
+  
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  
+  color: #FFFFFF; 
+  text-decoration: none;
+}
+
+.outer .activenavmenu .menuitems li{
+  padding: 3rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.outer .activenavmenu .menuitems .whatsapp{
+  width: 4.8rem;
+  height: 4.8rem;
+  border-radius: 50%;
+  background: #5772FF;
+  margin-left: 3rem;
+}
+
+.outer .navmenu{
+  display: none;
+  left: -100px;
+}
+
+/* Responsiveness */
+
+@media screen and (max-width : 870px){
+  .nav .outer{
+    width: 100%;
+  }
+}
+
+@media screen and (max-width : 665px){
+  .nav, .nav_colorChange{
+    background: #FFFFFF;
+    /* height: 58px */
+  }
+
+  .nav_colorChange .inner{
+    display: none;
+  }
+
+  .nav_colorChange .phn{
+    display: none;
+  }
+
+  .nav .outer{
+    width: 90%;
+    /* width: 100%; */
+    justify-content: space-between;
+  }
+
+  .nav_colorChange .outer{
+    width: 90%;
+    justify-content: space-between;
+  }
+
+  .outer .companylogo img:nth-child(1){
+    display: none;
+  }
+
+  .outer .companylogo img:nth-child(2){
+    display: block;
+  }
+
+  .nav .outer .inner{
+    display: none;
+  }
+
+  .nav .outer .phn{
+    display: none;
+  }
+
+  .outer .hamburger{
+    display: block;
+    cursor: pointer;
+  }
+  
+}
+
+@media screen and (max-width : 545px){
+  
 }
