--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,9 @@
   width: 100vw;
   height: 100vh;
 } */
+
+/* @media screen and (max-width : 480px){ */
+  .App{
+    overflow-x: hidden !important;
+  }
+/* } */
