--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -13,3 +13,45 @@
     height: 90%;
 }
 
+/* Responsivenes */
+
+@media screen and (max-width : 1500px){
+    .gallery .gallerymain{
+        height: 1800px;
+    }   
+}
+
+@media screen and (max-width : 1040px){
+    .gallery .gallerymain{
+        height: 1900px;
+    }  
+}
+
+@media screen and (max-width : 1020px){
+    .gallery .gallerymain{
+        height: 3200px;
+    }  
+}
+
+/* @media screen and (max-width : 480px){
+
+    .gallery .gallerymain{
+        height: 2500px;
+    }
+    
+} */
+
+@media screen and (max-width : 368px){
+
+    .gallery .gallerymain{
+        height: 2500px;
+    }
+    
+}
+
+
+@media screen and (min-width : 370px) and (max-width : 480px){
+    .gallery .gallerymain{
+        height: 2700px;
+    }
+}
