--- a/src/style/Carousel.css
+++ b/src/style/Carousel.css
@@ -286,6 +286,19 @@
     display: none;
   }
 
+  /* .carousel{
+    width: 100%;
+    height: 350px; 
+  } */
+
+  
+}
+
+@media screen and (max-width : 480px){
+  .social_media{
+    right: 0;
+  }
+
   .carousel{
     width: 100%;
     height: 350px; 
