--- a/src/style/CoreCapabilities.css
+++ b/src/style/CoreCapabilities.css
@@ -235,3 +235,60 @@
         top: 0;
     }
 }
+
+
+@media screen and (max-width : 480px){
+    .corecapabilities{
+        width: 100%;
+        height: 1203px;
+    }
+
+    .corecapabilities .main{
+        height: 90%;
+    }
+    
+    .corecapabilities .main .bottom{
+        width: 100%;
+        height: 90%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .corecapabilities .main .bottom .col1{
+        order: 1;
+    }
+
+    .corecapabilities .main .bottom .col2{
+        background-size:contain;
+        order: -1;
+        position: relative;
+        left: 6%;
+    }
+    .corecapabilities .main .bottom .col3{
+        order: 2;
+    }
+
+    .corecapabilities .main .bottom .col{
+        width: 80%;
+        height: 25%;
+    }
+    .corecapabilities .main .bottom .col .box{
+        width: 100%;
+        /* height: 80px; */
+        height: 0%;
+        /* background-color: blueviolet; */
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;        
+    }
+
+    .corecapabilities .main .bottom .col .box .contentright{
+        text-align: left;
+        order: 2;
+        margin-left: 1rem;
+    }
+    
+    .corecapabilities .main .bottom .col .box .contentright .headingright{
+        text-align: left;
+    }
+}
