--- a/src/style/Template.css
+++ b/src/style/Template.css
@@ -56,3 +56,24 @@
     text-decoration: none;
     color: white;
 }
+
+/* Responsiveness */
+@media screen and (max-width : 480px){
+    .template .social_media{
+        /* right: 36.9%; */
+        right: 0;
+        z-index: 3;
+    }
+
+    .template{
+        width: 100%;
+        /* height: 50rem; */
+        height: 350px;
+    }
+
+    .template .main{
+        height: 35%;
+        position: relative;
+        top: 10%;
+    }
+}
