--- a/src/style/wsp-gallery.css
+++ b/src/style/wsp-gallery.css
@@ -84,3 +84,9 @@
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */  
 }
+
+@media screen and (max-width : 480px){
+  .galleryWrap{
+    height: 1203px;
+  }
+}
