--- a/src/style/wsp-gallery.css
+++ b/src/style/wsp-gallery.css
@@ -85,8 +85,50 @@
   user-select: none; /* Standard syntax */  
 }
 
-@media screen and (max-width : 480px){
+/* @media screen and (max-width : 480px){
   .galleryWrap{
     height: 1203px;
   }
+} */
+
+@media screen and (min-width : 370px) and (max-width : 480px){
+  .galleryWrap{
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .galleryWrap .single{
+    width: 300px;
+  }
+
+  .fullScreenImage {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .fullScreenImage img{
+    width: 96%;
+  }
+}
+
+@media screen and (max-width : 368px){
+  .galleryWrap{
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .galleryWrap .single{
+    width: 280px;
+  }
+  
+  .fullScreenImage {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .fullScreenImage img{
+    width: 96%;
+  } 
 }
