--- a/src/style/Clients.css
+++ b/src/style/Clients.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .clients .main{
@@ -68,10 +69,46 @@
     }
 
     .clients{
-        height: 65rem;
+        /* height: 65rem; */
+        height: 55rem;
+    }
+
+    .clients .main{
+        height: 40rem;
     }
 
     .clients .main .top{
         top: 0;
+    }
+
+    .clients .main .bottom{
+        height: 80%;
+    }
+}
+
+
+@media screen and (max-width : 480px){
+    .clients .main .bottom{
+        height: 80%;
+        /* flex-wrap: nowrap; */
+    }
+
+    .clients .main .bottom .logo1 img{
+        /* width: 100px;
+        height: 100px; */
+        width: 18rem;
+        height: 15rem;
+    }
+    .clients .main .bottom .logo2 img{
+        width: 15rem;
+        height: 15rem;
+    }
+    .clients .main .bottom .logo3 img{
+        width: 20rem;
+        height: 15rem;
+    }
+    .clients .main .bottom .logo4 img{
+        width: 18rem;
+        height: 15rem;
     }
 }
