--- a/src/style/Quotes.css
+++ b/src/style/Quotes.css
@@ -99,3 +99,14 @@
     flex-grow: 0;    
     cursor: pointer;        
 }
+
+@media screen and (max-width : 480px){
+    .quotes .main{
+        width: 100%;
+        height: 314px;
+    }
+
+    .quotes .main .content{
+        width: 49rem;
+    }
+}
