--- a/src/style/Content4.css
+++ b/src/style/Content4.css
@@ -172,8 +172,31 @@ color: white;
     }
 
     .content4 .main .box{
-        width: 50%;
+        width: 60%;
     }
+    
+    .content4 .main .box1 .top{
+        width: 17.3rem;
+    }
+
+    .content4 .main .box2 .top{
+        width: 25.3rem;
+    }
+    .content4 .main .box3 .top{
+        width: 21.7rem;
+    }
+
+
+    .content4 .main .box .top .heading{
+        font-size: 16px;
+    }
+
+    .content4 .main .box .bottom{
+        font-size: 14px;
+        /* left: 4.5rem; */
+    }
+
+
 }
 
 @media screen and (max-width : 480px){
@@ -188,6 +211,28 @@ color: white;
     }
 
     .content4 .main .box{
-        width: 80%;
+        /* width: 80%; */
+        width: 320px;
+        height: 250px;
+    }
+
+    .content4 .main .box1 .top{
+        width: 17.3rem;
+    }
+
+    .content4 .main .box2 .top{
+        width: 25.3rem;
+    }
+    .content4 .main .box3 .top{
+        width: 21.7rem;
+    }
+
+    .content4 .main .box .top .heading{
+        font-size: 16px;
+    }
+
+    .content4 .main .box .bottom{
+        font-size: 14px;
+        left: 4.5rem;
     }
 }
