--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -145,11 +145,13 @@
 
 .outer .activenavmenu{
   position: absolute;
+  /* position: fixed; */
   display: block;
   width: 100%;
   height: 66.1rem;
   background: #4D0043;
   top: 90%;
+  /* top: 12%; */
   transition: left 1s;
   left: 0;
   z-index: 1;
@@ -259,7 +261,7 @@
   .nav_colorChange{
     width: 100%;
     /* width: 50rem; */
-    z-index: 2;
+    z-index: 3;
   }
 
   .nav_colorChange .activenavmenu .menuitems li{
