--- a/src/style/WhoWeAre.css
+++ b/src/style/WhoWeAre.css
@@ -104,11 +104,14 @@ justify-content: space-between;
 
 @media screen and (max-width : 600px){
     .wwr_outer{
-        height: auto;
+        /* height: auto; */
+        height: 680px;
         flex-direction: column;
     }
 
     .wwr_outer .rightside{
+        width: 100%;
+        height: 100%;
         order: 1;
     }
 
@@ -117,7 +120,32 @@ justify-content: space-between;
     }
 
     .wwr_outer .leftside{
-        /* width: 40%; */
+        width: 100%;
         order: 2;
+    }
+
+    .leftside .content{
+        height: 37.7rem;
+    }
+
+}
+
+
+@media screen and (max-width : 480px){
+    .leftside .content{
+        height: 52rem;
+    }
+
+    .leftside .content .heading{
+        font-size: 25px;
+    }
+
+    .leftside .content .bar{
+        width: 94px;
+        height: 2px;
+    }
+
+    .leftside .content .text{
+        font-size: 1.9rem;
     }
 }
