--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -17,8 +17,8 @@
 
 .blog .main .left{
     display: block;
-    width: 78rem;
-     /* width: 68%; */
+    width: 80rem;
+     /* width: 66%; */
     height: 100%;
 
     display: flex;
@@ -26,15 +26,26 @@
     justify-content: space-between;
 }
 
-.blog .main .left .box{
-    /* flex: 0 32%; */
-    flex: 0 48%;
-    /* height: 47.2rem; */
+.blog .main .left a{
+    text-decoration: none;
     height: 45.2rem;
-    /* margin-bottom: 2%; */
+    /* width: 38.8rem; */
+    width: 49%;
+    margin: .2rem;
+}
+
+.blog .main .left .box{
+    /* flex: 0 48%;
+
+    height: 45.2rem;
+    
     width: 38.4rem;
-    margin-bottom: 3%;
-    /* background-color: red; */
+    margin-bottom: 3%; */
+    
+}
+
+.blog .main .left .box .top img{
+    max-width: 100%;
 }
 
 .blog .main .left .box .bottom{
@@ -102,9 +113,6 @@
     color: #898B92;    
 }
 
-.blog .main .left a{
-    text-decoration: none;
-}
 
 .blog .main .right{
     width: 38.4rem;
@@ -196,6 +204,7 @@
 .blog .main .right .search input[type=text]{
     border: none;
     outline: 0;
+    width: 100%;
 }
 
 .blog .main .right .search .searchBar{
@@ -209,7 +218,8 @@
     padding: 2.4rem 4rem;
     /* gap: 13rem; */
 
-    width: 28.3rem;
+    /* width: 28.3rem; */
+    width: 74%;
     height: 5.6rem;
     
     background: #FFFFFF;
@@ -219,14 +229,15 @@
     margin-left: 3rem;
 }
 
-.blog .main .right .search input ::placeholder{
+.blog .main .right .search .searchBar input ::placeholder{
     width: 7.1rem;
     height: 2.2rem;
     
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
-    font-size: 1.8rem;
+    /* font-size: 1.8rem; */
+    /* font-size: 12%; */
     line-height: 120%;
     /* identical to box height, or 22px */
     
@@ -245,4 +256,147 @@
     color: #5772FF;
     font-size: 1.8rem;
     /* margin-left: 3rem; */
+}
+
+/* Responsiveness */
+@media screen and (max-width : 1440px){
+    .blog .main .left{
+        width: 68%;
+    }
+
+    .blog .main .right{
+        width: 30%;
+    }
+
+    .blog .main .right .hr{
+        width: 96%;
+    }
+
+    .blog .main .left a{
+
+    }
+
+
+}
+
+@media screen and (max-width : 1000px){
+    .blog .main{
+        width: 95%;
+    }
+}
+
+@media screen and (max-width : 700px){
+    .blog .main .right .search .searchBar ::-webkit-input-placeholder { 
+        color: #fff;
+        /* font-size: 10px; */
+        /* font-size: 2rem; */
+    }
+
+    .blog .main{
+        width: 99%;
+    }
+}
+
+@media screen and (max-width : 600px){
+    .blog .main{
+        /* height: 116rem; */
+        height: 180rem;
+        flex-direction: column;
+    }
+
+    .blog{
+        height: 185rem;
+    }
+
+    .blog .main .left{
+        width: 90%;
+    }
+
+    .blog .main .right{
+        width: 60%;
+    }
+
+    .blog .main .right .blogCategory{
+        font-size: 18px;
+    }
+
+    .blog .main .right .blogcategories{
+        margin-left: 11rem;
+    } 
+
+    .blog .main .right a{
+        font-size: 14px;
+        width: 25rem;
+    } 
+
+    .blog .main .right .search .searchHeading{
+        font-size: 18px;
+    }
+
+    .blog .main .right .search .searchBar ::-webkit-input-placeholder { 
+        color: #898B92; 
+        /* font-size: 10px; */
+        /* font-size: 2rem; */
+    }
+}
+
+@media screen and (max-width : 480px){
+
+    .blog{
+        height: 292rem;
+    }
+
+    .blog .main{
+        height: 285rem;
+    }
+
+    .blog .main .left{
+        width: 100%;
+        height: 71%;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+    }
+
+    .blog .main .left a{
+        /* width: 65%; */
+        width: 80%;
+    }
+
+    .blog .main .left .box .bottom .blogheading{
+        width: 38.1rem;
+        height: 3.8rem;
+    }
+
+    .blog .main .left .box .bottom .datencmt{
+        width: 24.8rem;
+        font-size: 14px;
+    } 
+
+    .blog .main .left .box .bottom .blogcontent{
+        width: 34.9rem;
+        font-size: 14px;
+    }
+
+    .blog .main .right{
+        width: 80%;
+        height: 543px;
+    }
+
+    .blog .main .right .blogCategory{
+        font-size: 20px;
+    }
+
+    .blog .main .right .blogcategories{
+        margin-left: 11rem;
+    }
+    
+    .blog .main .right .search .searchHeading{
+        font-size: 20px;
+    } 
+
+    .blog .main .right a{
+        font-size: 12px;
+        width: 25rem;
+    } 
 }
