--- a/src/components/Careers/Careers.css
+++ b/src/components/Careers/Careers.css
@@ -132,14 +132,22 @@
 
 
 /* Responsiveness */
+@media screen and (max-width : 1410px){
+    .careers .main .bottom a .box .boxtop{
+        width: 27.5rem;
+    }
+    
+}
+
 @media screen and (max-width : 1200px){
     .careers .main .bottom a .box .boxtop{
-        width:auto;
+        /* width:auto; */
     }
     
     
     .careers .main .bottom a .box .boxbottom{
         font-size: 1.2rem;
+        /* font-size: 12px; */
     }
 
     .careers .main .bottom a .box .boxtop .boxheading{
@@ -163,6 +171,20 @@
     .careers .main .bottom a{
         width: 80%;
     }
+    
+    .careers .main .bottom a .box .boxtop{
+        width: 28.5rem;
+        /* left: 3.9rem; */
+    }
+
+    .careers .main .bottom a .box .boxtop .boxheading{
+
+    }
+
+    .careers .main .bottom a .box .boxbottom{
+        left: 3.9rem;
+        font-size: 12px;
+    } 
 }
 
 @media screen and (max-width : 500px) {
@@ -194,10 +216,10 @@
     }
 
     .careers .main .bottom a .box .boxbottom{
-        font-size: 10px;
+        font-size: 11.2px;
         /* left: 14%; */
     }
-
+    
     .careers .main .bottom a .box .boxtop .boxheading{
         font-size: 14px;
     }     
